--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 {% include header.html %}
-<div class="content flex-item">
+<div class="content">
   {% capture my_include %}{% include intro.md %}{% endcapture %}
   {{ my_include | markdownify }}
 </div>
