--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,6 @@ title: Contact
 
 {% include header.html %}
 <div class="content">
-  {% capture my_include %}{% include contact.md %}{% endcapture %}
-  {{ my_include | markdownify }}
+  <h1>Contact us</h1>
+  <p>Some other stuff to bulk this page out.</p>
 </div>
