--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@ title: Home
 
 {% include header.html %}
 <div class="content">
-  {% capture my_include %}{% include intro.md %}{% endcapture %}
-  {{ my_include | markdownify }}
+  <h1>Contact us</h1>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
 </div>
