--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact
 ---
 
 {% include header.html %}
-<div class="content">
+<section class="content top-section">
   <h1>Contact us</h1>
   <p>Some other stuff to bulk this page out.</p>
-</div>
+</section>
