--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 
 {% include header.html %}
-<div class="content">
-  <h1>Contact us</h1>
+<section class="content top-section">
+  <h1>Fix ur words</h1>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
@@ -16,4 +16,4 @@ title: Home
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
-</div>
+</section>
