Fixed header working

--- a/index.html
+++ b/index.html
@@ -15,4 +15,44 @@ title: Home
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
+  <p>Some other stuff to bulk this page out.</p>
 </section>
