New background image, font, reduce text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <section class="content top-section">
-  <h1>Fix ur words</h1>
+  <h1>Fix ur werdz</h1>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
@@ -13,36 +13,14 @@ title: Home
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
+
+
   <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
+</section>
+<section class="content">
+  <h2>
+    Yep we're really good at it
+  </h2>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
   <p>Some other stuff to bulk this page out.</p>
