Edit contact page

--- a/contact.html
+++ b/contact.html
@@ -5,5 +5,5 @@ title: Contact
 
 <section class="content top-section">
   <h1>Contact us</h1>
-  <p>Some other stuff to bulk this page out.</p>
+  <p><a href="mailto:beth.s.aitman@gmail.com?Word fixing">Email us</a> to find out more.</p>
 </section>
