Add real content

--- a/index.html
+++ b/index.html
@@ -4,33 +4,30 @@ title: Home
 ---
 
 <section class="content top-section">
-  <h1>Fix ur werdz</h1>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-
-
-  <p>Some other stuff to bulk this page out.</p>
+  <h1>Need help with words?</h1>
+  <p>We're experts at writing concise, clear content, and we can give you a hand.</p>
+  <p>We can help you clean up:</p>
+  <ul>
+    <li>articles</li>
+    <li>blog posts</li>
+    <li>CVs and covering letters</li>
+    <li>documentation and software help</li>
+    <li>emails and professional communication</li>
+    <li>and lots more</li>
+  </ul>
+  <p>Our rates are very reasonable. <a href="contact.html">Contact us</a> for details.</p>
 </section>
 <section class="content">
   <h2>
-    Yep we're really good at it
+    Testimonials
   </h2>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
-  <p>Some other stuff to bulk this page out.</p>
+  <p>We cut Alex Yates's 3,500-word blog post down by 20%. He says:</p>
+  <blockquote>You've made a tremendous difference.</blockquote>
+</section>
+<section class="content bottom-section">
+  <h2>About us</h2>
+  <h3>James</h3>
+  <p>James teaches English in Iida, Japan. He's written for software and video games, and has a first-class honours degree in Creative Writing.</p>
+  <h3>Beth</h3>
+  <p>Beth's an experienced technical writer working in Cambridge, UK. She's done some other stuff, and has a History degree from Oxford.</p>
 </section>
