--- a/contact.html
+++ b/contact.html
@@ -5,5 +5,5 @@ title: Contact
 
 <section class="content top-section">
   <h1>Contact us</h1>
-  <p><a href="mailto:beth.s.aitman@gmail.com?Word fixing">Email us</a> to find out more.</p>
+  <p><a href="mailto:beth.s.aitman@gmail.com?Word fixing">Email us</a> if you're interested in working with us.</p>
 </section>
