--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <section class="content top-section">
   <h1>Need help with words?</h1>
   <p>We're experts at writing concise, clear content, and we can give you a hand.</p>
-  <p>We can help you clean up:</p>
+  <p>We can help you write:</p>
   <ul>
     <li>articles</li>
     <li>blog posts</li>
@@ -23,6 +23,7 @@ title: Home
   </h2>
   <p>We cut Alex Yates's 3,500-word blog post down by 20%. He says:</p>
   <blockquote>You've made a tremendous difference.</blockquote>
+  <p>I'm sure other people have said nice things about us too.</p>
 </section>
 <section class="content bottom-section">
   <h2>About us</h2>
